# claude-code-history-mcp

./: .npmignore  LICENSE  README  README.md  benchmark-compare.ts  benchmark-full.ts  package-lock.json  package.json
deprecated/: README.md
deprecated/claudecodehistory-bridge/: package.json  test-msgpack.ts
deprecated/claudecodehistory-bridge/rust-worker/: Cargo.toml
deprecated/claudecodehistory-bridge/rust-worker/src/: main.rs
deprecated/claudecodehistory-bridge/src/: index.ts  msgpack-client.ts  types.ts
deprecated/claudecodehistory-rust/: Cargo.toml  benchmark.ts  package.json
deprecated/claudecodehistory-rust/scripts/: postinstall.cjs
deprecated/claudecodehistory-rust/src/: error.rs  ffi.rs  index.ts  lib.rs  parser.rs  search.rs  types.rs
deprecated/claudecodehistory-rust/types/: index.ts
deprecated/claudecodehistory-wasm/: Cargo.toml  benchmark.ts  package.json
deprecated/claudecodehistory-wasm/src/: index.ts  lib.rs  parser.rs  search.rs  ts-fallback.ts  types.rs
deprecated/claudecodehistory-wasm/types/: index.ts
example/: package.json
example/src/: index.js  index.ts
rust/: Cargo.toml  build.rs  package.json
rust/src/: lib.rs  parser.rs  types.rs  utils.rs
src/: history-service.js  history-service.ts  index.ts
tests/: setup.js
tests/integration/: server.test.js
tests/unit/: session-methods.test.js  session-methods.test.ts  types.test.js  utils.test.js
typescript/: package-lock.json  package.json  tsconfig.json
typescript/example/: README.md  package.json  tsconfig.json
typescript/example/src/: index.ts
typescript/src/: history-service.ts  index.js
typescript/tests/fixtures/: mock-data.js
typescript/tests/integration/: date-filtering.test.js  enhanced-search.test.js
typescript/tests/unit/: session-methods.test.ts
