[package]
name = "claudecodehistory-wasm"
version = "0.1.0"
edition = "2021"
authors = ["ebowwa"]
description = "High-performance Claude Code history parser compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/ebowwa/codespaces"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
# Removed chrono - using String timestamps for better performance

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1  # Better optimization at cost of compile time
