[package]
name = "claudecodehistory-worker"
version = "0.1.0"
edition = "2021"
authors = ["ebowwa"]
description = "Rust worker for Claude Code history parsing via stdin/stdout"
license = "MIT"

[[bin]]
name = "claudecodehistory-worker"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"  # SIMD-accelerated JSON parsing
rmp-serde = "1.3"   # MessagePack serialization
rmpv = { version = "1.3", features = ["with-serde"] }  # MessagePack dynamic value type with serde
byteorder = "1.5"   # For length-prefixed framing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1  # Better optimization
strip = true
